src/snapshots/ghosty_launch__ui__snapshot__apps_panel.snap
---
source: src/ui.rs
expression: "render_str(&app, 78, 22)"
---




           ╭ tus apps ────────────────────────────────────────────╮
           │                                                      │
           │                        ▄████▄                        │
           │                       ▐ ●  ● ▌                       │
           │                       ▐█▀██▀█▌                       │
           │         Ghosty Launch  ·  que lo haga Ghosty         │
           │                                                      │
           │  Tus apps (2)                                        │
           │                                                      │
           │  › ● Mi Tienda                                       │
           │        https://sb-a-3000.sandboxes.easybits.cloud    │
           │    ● Blog                                            │
           │                                                      │
           ╰──────────────────────────────────────────────────────╯



   enter ver    c crear    d borrar    q salir
