src/snapshots/ghosty_launch__ui__snapshot__launching.snap
---
source: src/ui.rs
assertion_line: 1142
expression: "render_str(&app, 78, 20)"
---



           ╭ publicando ──────────────────────────────────────────╮
           │                                                      │
           │                                ·                     │
           │                ·       ▄████▄       ·                │
           │                       ▐ ─  ─ ▌     ✧                 │
           │                       ▐█▀██▀█▌                       │
           │         Ghosty Launch  ·  que lo haga Ghosty         │
           │  ● Creando VM persistente                            │
           │  ⠋ Clonando + instalando + arrancando                │
           │  ○ Verificando que responda                          │
           │  ○ Publicando puerto                                 │
           │  25% ──────────────────────────────────────────────  │
           │                                                      │
           ╰──────────────────────────────────────────────────────╯


   m audio    esc cancelar
